[[release-notes-5.10.1]]
== 5.10.1

*Date of Release:* ❓

*Scope:* minor bug fixes and improvements since 5.10.0.

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/72?closed=1+[5.10.1] milestone page in the
JUnit repository on GitHub.


[[release-notes-5.10.1-junit-platform]]
=== JUnit Platform

==== Bug Fixes

* ❓


[[release-notes-5.10.1-junit-jupiter]]
=== JUnit Jupiter

==== Bug Fixes

* The `RandomNumberExtension` example in the
  <<../user-guide/index.adoc#extensions-RandomNumberExtension, User Guide>> has been
  updated to properly support `Integer` types as well as non-static field injection.

==== New Features and Improvements

* Improved Javadoc for `Assertions.assertTimeoutPreemptively` regarding thread interrupt.
* Documentation for `@Disabled` and conditional annotations now explicitly explains that
  such annotations are not inherited by subclasses.


[[release-notes-5.10.1-junit-vintage]]
=== JUnit Vintage

==== Bug Fixes

* Fixed reporting for JUnit 3 test classes that use JUnit 4's `@Ignored` annotation.